--- a/report/Design/design.tex
+++ b/report/Design/design.tex
@@ -33,7 +33,7 @@ Let us break this down:
 \item{\textit{\textbf{Through meaning, sound, and rhythm}} describes that this purpose is not reached purely by words, but other language features.}
 \end{itemize}
 
-To summarise, the purpose of poetry is to use one's imagination, knowledge and experience to trigger empathy about a particular subject matter. Poetry is a vehicle through which poets can share a very personal message that they want the reader to experience and remember. 
+To summarise, the purpose of poetry is to use one's imagination, knowledge and experience to trigger empathy about a particular subject matter. Poetry is a vehicle through which poets can share a very personal message that they want the reader to experience and remember. Poems are concise but have many layers of meaning that are subtle even to human readers and that only the best of poets can fully control. 
 
 We must keep this in mind throughout the project, as it is important to realise that the features of poetry discussed in the next section are not arbitrary rules on form but purposeful techniques used to make the language more concise and effective.
 
@@ -597,9 +597,7 @@ This can be quite flexible as it can adapt to the syntactic structure of the sen
 \label{fig:shopkeeper-frames-yoda}
 \end{figure}
 
-These examples are retrieved through the SEMAFOR tool[ref],  which is one of a number of available SRLs[http://www.kenvanharen.com/2012/11/comparison-of-semantic-role-labelers.html]. SEMAFOR was trained on FrameNet data (see \ref{sec:common-sense-bg}) to determine the frame-semantic structure of the text.
-
-\paragraph{FrameNet}
+These examples are retrieved through the SEMAFOR tool[ref],  which is one of a number of available SRLs[http://www.kenvanharen.com/2012/11/comparison-of-semantic-role-labelers.html]. SEMAFOR was trained on FrameNet data (see \ref{sec:fn}) to determine the frame-semantic structure of the text.
 
 While SRL may not be able to handle "donkey phrases" and does not inherently resolve anaphora or presuppositions, it is a much more effective method of extracting roles and relationships between words. The biggest benefit is that it is not entirely dependent on perfect grammar, which will be very useful in poetry analysis.
 
@@ -647,6 +645,7 @@ A \textit{meronym} of a synset is a \textbf{part-of} relation. It denotes member
 
 
 \paragraph{FrameNet}
+\label{sec:fn}
 FrameNet\cite{baker1998berkeley} is a lexicon with framing semantics to \textit{define and constrain} the building of clauses around individual words. It describes the meaning of a word based on the words that typically participate with it, known as \textit{frame elements} or \textit{FEs}.
 
 Take the Desiring frame for example, which has a list of words, referred to as \textit{lexical units} or \textit{LUs} - that are used in statements that indicate desire, e.g. want, lust, yearn etc. Each of these LUs come with their own \textit{lexical entries} that describe the FEs and \textit{Valence patterns}. These define the types of phrases that can be built around a particular LU.
