--- a/report/Theory/theory.tex
+++ b/report/Theory/theory.tex
@@ -246,6 +246,7 @@ We record the tense of each line as well as the overall tense of the poem. Each 
 
 
 \section{Characters and Context}
+\label{sec:chars}
 Here we describe our approach to determining the context of the poem in terms of its characters and their relationships as described in section \ref{sec:pragpers}. The aim is to build a representation of the characters much like the conceptual networks described in Section \ref{sec:common-sense-bg}. This will then be compared in the abstraction phase to find a correlation between these representations and collections of poetry.
 
 \subsection{Semantic Relations}
